mobile shifting fix?

--- a/wetmap/src/App.css
+++ b/wetmap/src/App.css
@@ -4,6 +4,8 @@
 
 .App {
   text-align: center;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .App-logo {
